kahuna/public/stylesheets/main.css
/* ... */
/* latin-ext */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  font-stretch: 87.5%;
  src: url("fonts/open-sans-v34-regular-latin-ext_memvYaGs126MiZpBA-UvWbX2vVnXBbObjwSVTSGmu0SC55K5gw.woff2") format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  font-stretch: 87.5%;
  src: url("fonts/open-sans-v34-regular-latin_memvYaGs126MiZpBA-UvWbX2vVnXBbObjwSVTS-mu0SC55I.woff2") format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* see http://google.github.io/material-design-icons/#icon-font-for-the-web */
@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: url("fonts/MaterialIcons-Regular.woff2") format('woff2'),
         url("fonts/MaterialIcons-Regular.woff") format('woff');
}

@keyframes spin {
    from   { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}
@-webkit-keyframes spin {
    from   { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

html {
    font: 62.5%/1.5 "Open Sans", sans-serif;
}

body {
    background-color: #333;
    color: #ccc;
    font-size: 1.6rem;
    margin: 0;
    padding: 0 0 0 0;
    font-synthesis: none;
}

h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-family: inherit;
    font-weight: normal;
    margin: 0;
}

figure, ul, li, dl, dd {
    margin: 0;
    padding: 0;
}

ul {
    list-style-type: none;
}

a {
    color: #ccc;
    text-decoration: none;
    cursor: pointer;
}
a:hover {
    color: white;
}

.coloured-link {
    color: #00adee;
}

input,
option,
select,
textarea,
button {
    font-family: "Open Sans", sans-serif;
    font-size: 1.4rem;
}

.text-input {
    background-color: #444;
    color: #ccc;
    border: 1px solid #999;
    padding: 5px;
    box-sizing: border-box;
}

.text-input::placeholder {
    color: #888;
}

textarea {
    resize: vertical;
}

/* annoyingly we have to have these seperate as the moz-placeholder breaks the
Chrome selector */
input[disabled],
textarea[disabled],
.disabled {
    color: #666;
}
input::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
    color: #666;
}
input::-moz-placeholder,
textarea:disabled::-moz-placeholder {
    color: #666;
}

button {
    border: 0;
    background: transparent;
    padding: 0;
    margin: 0;
    cursor: pointer;
    color: inherit;
    font-size: inherit;
}

.button {
    border: 0;
    background: #00adee;
    border-radius: 2px;
    box-shadow: 0 2px #00729c;
    box-sizing: border-box;
    color: white;
    display: block;
    padding: 5px 10px;
    font-size: 1.4rem;
    position: relative;
}
.button:hover {
    background: #008fc5;
}
.button:active {
    box-shadow: none;
    top: 2px;
}
.button:focus,
a:focus {
    outline: 2px solid rgba(255, 255, 255, 0.5);
    outline-offset: -3px;
}

button[disabled],
.button[disabled] {
    background-color: #999;
    box-shadow: 0 2px #666;
    color: #ccc;
}
.button--green {
    background: forestgreen;
    box-shadow: 0 2px darkgreen;
}

.button-shy {
    padding: 2px 5px;
    color: #ccc;
    background: transparent;
    box-shadow: 0 2px #888;
    border: 1px solid #888;
    font-size: inherit;
}
.button-shy:not([disabled]):hover {
    background: #888;
}
.button-ico {
    padding: 4px;
}
.button-ico-square {
    width: 36px;
    height: 36px;
}

.button-save {
    background: #00adee;
    color: white;
    /* above the edit button of a field below */
    z-index: 10;
}
.button-save[disabled] {
    background: #888;
    cursor: auto;
}

.button-save:hover {
    background-color: #008fc5;
}

.button-cancel,
.button-edit {
    background-color: #898989;
}

.button-cancel:hover,
.button-edit:hover {
    background-color: #666666;
}

.button-save,
.button-cancel,
.button-edit {
    padding: 0 5px;
    height: 24px;
    color: white;
}

.button-save,
.button-cancel {
    margin-left: 5px;
}

.button--confirm-delete {
    background: red;
}

.button--confirm-delete gr-icon {
    padding-right: 5px;
}

.button--confirm-delete:hover {
    background: #960000;
}

.loader {
    text-align: center;
}
.loader:after {
    border: 12px solid white;
    border-bottom-width: 35px;
    content: "g";
    height: 90px;
    width: 80px;
    display:  block;
    box-sizing:  border-box;
    background:  #ddd;
    margin: auto;
    color:  #005689;
    font-size: 2.6rem;
    margin-top: 10px;

    animation-duration: 1500ms;
    animation-name: flipper;
    animation-iteration-count: infinite;
    -webkit-animation-duration: 1500ms;
    -webkit-animation-name: flipper;
    -webkit-animation-iteration-count: infinite;
}
@keyframes flipper {
    0% {}
    95% {}
    100% { transform: rotateY(360deg); }
}
@-webkit-keyframes flipper {
    0% {}
    95% {}
    100% { transform: rotateY(360deg); }
}

.saving {
    display: inline;
    width: 15px;
    line-height: 15px;
    text-align: center;
    padding: 0 2px;
    color: #00adee;

    animation-name: spin;
    animation-duration: 1500ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    -webkit-animation-name: spin;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-duration: 1500ms;
    -webkit-animation-timing-function: linear;
}

.spin {
    animation-name: spin;
    animation-duration: 500ms;
    animation-iteration-count: infinite;
    animation-timing-function: ease-out;

    -webkit-animation-name: spin;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-duration: 500ms;
    -webkit-animation-timing-function: ease-out;
}

.full-width {
    width: 100%;
}

.flex-right {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}
/* ... */

